--- a/ctstore/css/store.css
+++ b/ctstore/css/store.css
@@ -2,6 +2,10 @@ html {
 	font-family: Arial, Helvetica, sans-serif;
 }
 
+body {
+	overflow-x: hidden;
+}
+
 a, a:visited {
 	color: black;
 	font-weight: bold;
